# barista

./: TODO  build.py  pyproject.toml  ruff.toml  taskfile.yml
src/: __main__.py  cfg.py
src/config/: appearance.json  editor.json
src/config/custom/: darkBlue.json
